Add a DROP_PUBLIC_TABLES option which drops just the tables rather than all of public.
Useful if you don't have permission to drop public.

--- a/postgres-restore-gs/Dockerfile
+++ b/postgres-restore-gs/Dockerfile
@@ -13,6 +13,7 @@ ENV POSTGRES_PASSWORD **None**
 ENV GS_BUCKET **None**
 ENV GS_PREFIX 'backup'
 ENV DROP_PUBLIC 'no'
+ENV DROP_PUBLIC_TABLES 'no'
 
 ADD restore.sh restore.sh
 
